src/objects/Favourite__c.object
<CustomObject>
    <fields>
        <fullName>MovieId__c</fullName>
        <label>Movie Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalTitle__c</fullName>
        <label>Original Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overview__c</fullName>
        <label>Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReleaseDate__c</fullName>
        <label>Release Date</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>poster_path__c</fullName>
        <label>poster_path</label>
        <type>TextArea</type>
    </fields>
    <label>Favourite</label>
    <nameField>
        <label>MovieName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Favourites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>